# immich-auto-stacker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.ghcr.yml  pyproject.toml
.github/workflows/: release.yml
src/immich_auto_stacker/: __init__.py  __main__.py  context.py  duration_parse.py  immich_api.py  logging_setup.py  main.py  matching.py  settings.py  stacker_service.py  startup_log.py  url_normalize.py
tests/: test_duration_parse.py  test_matching.py  test_url_normalize.py
